[package]
name = "rust-digger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3", features = ["derive"] }
csv = "1.2.2"
liquid = "0.26.4"
log = "0.4"
once_cell = "1.18.0"
regex = "1.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "4.2"


[[bin]]
name = "fmt"
path = "src/fmt.rs"

[[bin]]
name = "vcs"
path = "src/vcs.rs"
