[package]
name = "rust_digger"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Collecting information about Rust Crates"
keywords = ["cli", "web"]
categories = ["web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/szabgab/rust-digger"
homepage = "https://rust-digger.code-maven.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3", features = ["derive"] }
csv = "1.2.2"
flate2 = "1.0.28"
liquid = "0.26.4"
log = "0.4"
once_cell = "1.18.0"
regex = "1.9.3"
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "4.2"
tar = "0.4.40"

[[bin]]
name = "rust-digger-html"
path = "src/html.rs"


[[bin]]
name = "rust-digger-fmt"
path = "src/fmt.rs"

[[bin]]
name = "rust-digger-vcs"
path = "src/vcs.rs"

[[bin]]
name = "rust-digger-clone"
path = "src/clone.rs"

[[bin]]
name = "rust-digger-download"
path = "src/download.rs"

[lints.clippy]
cargo        = { priority = -1, level = "deny" }
complexity   = { priority = -1, level = "deny" }
correctness  = { priority = -1, level = "deny" }
nursery      = { priority = -1, level = "deny" }
pedantic     = { priority = -1, level = "deny" }
perf         = { priority = -1, level = "deny" }
restriction  = { priority = -1, level = "deny" }
style        = { priority = -1, level = "deny" }
suspicious   = { priority = -1, level = "deny" }

blanket_clippy_restriction_lints = "allow" # We use Extreme Clippy so yes, we wanted to enable everything.
multiple_crate_versions = "allow" # I am not sure if we can fix this given that they are all brought in by dependencies

arithmetic_side_effects = "allow"
as_conversions = "allow"
cast_precision_loss = "allow"
exhaustive_structs = "allow"
float_arithmetic = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
missing_const_for_fn = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_raw_strings = "allow"
panic = "allow"
print_stdout = "allow"
shadow_unrelated = "allow"
single_match_else = "allow"
str_to_string = "allow"
uninlined_format_args = "allow"
unwrap_used = "allow"
absolute_paths = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
default_numeric_fallback = "allow"
expect_used = "allow"
get_unwrap = "allow"
ignored_unit_patterns = "allow"
let_underscore_untyped = "allow"
module_name_repetitions = "allow"
panic_in_result_fn = "allow"
question_mark_used = "allow"
shadow_reuse = "allow"
single_call_fn = "allow"
string_slice = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"
verbose_file_reads = "allow"
manual_let_else = "allow"
