[package]
name = "rust_digger"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Collecting information about Rust Crates"
keywords = ["cli", "web"]
categories = ["web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/szabgab/rust-digger"
homepage = "https://rust-digger.code-maven.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5", features = ["derive"] }
csv = "1.4.0"
flate2 = "1.1.5"
liquid = "0.26.4"
liquid-filter-commafy = "0.1.1"
log = "0.4"
once_cell = "1.18.0"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
simple_logger = "5.1"
tar = "0.4.40"
tempdir = "0.3.7"
thousands = "0.2.0"
toml = "0.9.10"
walkdir = "2.5"
markdown = "1.0.0"
git-digger = "0.2.2"

[[bin]]
name = "html"
path = "src/html.rs"


[[bin]]
name = "fmt"
path = "src/fmt.rs"

[[bin]]
name = "analyze-vcs"
path = "src/vcs.rs"

[[bin]]
name = "clone"
path = "src/clone.rs"

[[bin]]
name = "download-db-dump"
path = "src/download_db_dump.rs"

[[bin]]
name = "download-crates"
path = "src/download_crates.rs"

[[bin]]
name = "analyze-crates"
path = "src/analyze_crates.rs"


[lints.clippy]
cargo        = { priority = -1, level = "deny" }
complexity   = { priority = -1, level = "deny" }
correctness  = { priority = -1, level = "deny" }
nursery      = { priority = -1, level = "deny" }
pedantic     = { priority = -1, level = "deny" }
perf         = { priority = -1, level = "deny" }
restriction  = { priority = -1, level = "deny" }
style        = { priority = -1, level = "deny" }
suspicious   = { priority = -1, level = "deny" }

blanket_clippy_restriction_lints = "allow" # We use Extreme Clippy so yes, we wanted to enable everything.
multiple_crate_versions = "allow" # I am not sure if we can fix this given that they are all brought in by dependencies
implicit_return = "allow"         # We want to encourage implicit return in this project
question_mark_used = "allow"      # We like using ? as a way to shorten code.
module_name_repetitions = "allow" # I don't mind it as it makes the functions more readable.
absolute_paths = "allow"          # I like using absoulut paths in function calls.
single_call_fn = "allow"          # We prefer to have shorter functions even if they are only used once.
float_arithmetic = "allow"        # In this application it is fine to have float arithmetic
cast_precision_loss = "allow"     # Not an issue for this application
allow_attributes_without_reason = "allow" # No need to entrer empty reason field
arbitrary_source_item_ordering = "allow" # For now I don't want to sort the functions just to make clippy happy
std_instead_of_alloc = "allow"       # No need for no_std
 
arithmetic_side_effects = "allow"
as_conversions = "allow"
exhaustive_structs = "allow"
indexing_slicing = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
unwrap_used = "allow"
cast_lossless = "allow"
default_numeric_fallback = "allow"
expect_used = "allow"
unnecessary_wraps = "allow"

std_instead_of_core = "allow"
